@@ -1,5 +1,9 @@
 #Nmap Changelog ($Id$); -*-text-*-
 
+o [Nping] Address build failure under libc++ due to "using namespace std;" in
+  several headers, resulting in conflicting definitions of bind(). Reported by
+  StormBytePP and Rosen Penev. [Daniel Miller]
+
 o [Ncat][GH#1868] Fix a fatal error when connecting to a Linux VM socket with
   verbose output enabled. [Stefano Garzarella]
 
